--- a/src/app/elements/elements-home/elements-home.component.html
+++ b/src/app/elements/elements-home/elements-home.component.html
@@ -1,1 +1,19 @@
-<app-placeholder [header]="true"></app-placeholder>
+<app-divider>
+    Placeholder Component
+</app-divider>
+
+<app-placeholder></app-placeholder>
+
+<app-divider>
+    Segment Component
+</app-divider>
+<app-segment>
+    <header>
+        <i class="pdf file outline icon"></i>
+        No documents listed for this customer.    
+    </header>
+   
+    <button class="ui primary button">
+        Add Document
+    </button>
+</app-segment>
